# JPMC-Quantitative-Researcher

./: .gitignore  Bucket FICO scores-2.ipynb  Bucket FICO scores-5.ipynb  CREDIT_RISK_README.md  GAS_CONTRACT_README.md  JPMC Gas Contracts-2.ipynb  JPMC_MASTER_README.md  Price Prediction-2.ipynb  README.md  README_6.md  Risk Estimation-5.ipynb  Risk Estimation.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
notebooks/: 01_credit_risk.ipynb  02_fico_bucketing.ipynb  03_gas_storage.ipynb
src/credit/: calibration.py  data.py  eval.py  generalisation.py  metrics.py  mitigation.py  operational.py
src/gas/: baselines.py  data.py  env.py  qlearning.py
tests/: test_credit_calibration.py  test_credit_data.py  test_credit_eval.py  test_credit_generalisation.py  test_credit_metrics.py  test_credit_mitigation.py  test_credit_operational.py  test_gas_baselines.py  test_gas_data.py  test_gas_env.py  test_gas_qlearning.py
