[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpmc-quantitative-research"
version = "0.2.0"
description = "Quantitative research projects from the JPMorgan Chase Forage virtual experience: credit risk, FICO bucketing, and natural gas storage with reinforcement learning."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Maksim Silchenko" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.0,<3",
    "numpy>=1.24,<3",
    "scikit-learn>=1.3,<2",
    "scipy>=1.10,<2",
    "matplotlib>=3.7,<4",
    "seaborn>=0.12,<1",
    "xgboost>=2.0,<4",
    "shap>=0.43,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<10",
    "nbformat>=5,<6",
    "nbconvert>=7,<8",
    "ipykernel>=6,<7",
    "jupyter>=1,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
